@startuml
skinparam classAttributeIconSize 0

enum TypeCompte <<enum>> {
  actif
  passif
  recette
  depense
}

abstract class AbstractCompte <<Abstract>> {
  # id : integer
  # nom : string
  # solde : float
  # parent : CompteVirtuel
  # type : TypeCompte
  __
  .. constructeur ..
  -AbstractCompte(string nom, string type, CompteVirtuel *parent) : nom(nom), type(type), parent(parent)
  .. getters ..
  +getId() : integer
  +getNom() : string
  +getSolde() : double
  +getParent() : CompteVirtuel
  +getType() : TypeCompte
  .. setters ..
  +setSolde()
}

class Compte <<Concrete>> {
 -operations : vector<*Operation>
}

class CompteVirtuel <<Concrete>> {
  - sousComptes : vector<*AbstractCompte>
  __
  .. getters ..
  +getSousComptes() : vector<*AbstractCompte>
  +getCompte(string nom) : AbstractCompte
  +getCompte(integer id) : AbstractCompte
  .. méthodes ..
  +getSolde() : double
}

AbstractCompte "*" --o "0..1" CompteVirtuel : contient <
AbstractCompte <|-- Compte
AbstractCompte <|-- CompteVirtuel

class CompteRacine << (S,#FF7700) Singleton >> {
  -instance : *CompteRacine
  __
  .. constructeur ..
  -CompteRacine()
  .. getters ..
  +static getInstance() : CompteRacine
  .. méthodes ..
  +createCompte(TypeCompte type, bool virtuel, int idParent) : AbstractCompte
  +genererBilan()
  +genererReleve()
  +genererResultat()
  +clotureLivre()
}


CompteRacine *-- AbstractCompte


class Operation {
  -compte : Compte*
  -debit : unsigned double
  -credit : unsigned double
  __
  .. constructeur ..
  -Operation(Compte* compte, double montant)
  .. getters ..
  +getCompte() : &Compte
  +getDebit() : unsigned double
  +getCredit() : unsigned double
  .. setters ..
  +setDebit()
  +setCredit()
  .. méthodes ..
  +checkValidite() : bool
  +echangerValeuresNegatives()
}

class Transaction {
  -date : date
  -reference : int
  -memo : string
  -operations : vector<*Operation>
  -rapprochee : bool
  __
  .. constructeur ..
  -Transaction(date date, int reference, string memo, vector<*Operation>)
  .. getters ..
  +getDate() :
  +getReference() : int
  +getMemo() : string
  +isRaprochee() : bool
  .. méthodes ..
  +checkValidite() : bool
}

Transaction "1" *-- "2..*" Operation
Compte "1" *-- "*" Operation

class TransactionManager << (S,#FF7700) Singleton >> {
  -instance : *TransactionManager
  __
  .. constructeur ..
  -TransfertManager()
  .. getters ..
  +static getInstance() : CompteRacine
  .. méthodes ..
  +createTransaction(string memo, vector<*Operation>) : Transaction
}

TransactionManager ..> Transaction : crée


@enduml

